# zk

./: Cargo.toml
gkr/: Cargo.toml
gkr/src/: circut.rs  gkr.rs  lib.rs
multilinear-kzg/: Cargo.toml
multilinear-kzg/src/: lib.rs  multilinear_kzg.rs  multilinear_kzg_prime.rs  trusted_setup.rs
multilinear-kzg/src/multilinear_kzg/: mod.rs  multilinear_kzg.rs
multilinear-kzg/src/trusted_setup/: trusted_setup.rs
polynomials/src/: lib.rs
polynomials/src/multilinear/: composite.rs  mod.rs  multilinear.rs
polynomials/src/univariate/: univariate.rs
shamir_secret_sharing/: Cargo.toml
shamir_secret_sharing/src/: lib.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  transcript.rs
sumcheck/src/sumcheck/: sumcheck.rs
sumcheck/src/transcipt/: transcript.rs
