[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
polynomials = {path = "../polynomials"}
sha3 = "0.10.8"
sumcheck = {path = "../sumcheck"}
multilinear-kzg = {path = "../multilinear-kzg"}

[dev-dependencies]
field-tracker = { git = "https://github.com/sublinearlabs/field-tracker", branch = "main" }